# FlowDesk-Backend

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/routes/: auth.py  categories.py  incidents.py  organizations.py  users.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: base.py  session.py
app/models/: category.py  enums.py  incident.py  notification.py  tenant.py  user.py  workflow_transition.py
app/schemas/: auth.py  category.py  common.py  organization.py  user.py
app/services/: category_service.py  supabase_admin.py  tenant_service.py  user_service.py
tests/: conftest.py  test_categories.py  test_health.py  test_jwt.py  test_me.py  test_organizations.py  test_tenant_isolation.py  test_users.py
