[project]
name = "flowdesk-backend"
version = "0.1.0"
description = "FlowDesk — multi-tenant SaaS incident & workflow management backend (FastAPI + Supabase + Fly.io)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Ivan Bazhenov", email = "bazhenov.in@gmail.com" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt[crypto]>=2.8",
    "httpx>=0.27",
    "email-validator>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "flake8>=7.0",
    "black>=24.0",
    "isort>=5.13",
    "testcontainers[postgres]>=4.5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
